<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="signUp_ViewModel"
            type="com.example.fypmoneydemo.signup.SignUpViewModel" />

    </data>


    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/light_red"
        android:fitsSystemWindows="true"
        tools:context=".signup.SignUpActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/const_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:src="@drawable/hand_img"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.358" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <FrameLayout
            android:id="@+id/sheet"
            android:layout_width="match_parent"
            android:layout_height="450dp"
            android:background="@drawable/slide_up_bottomsheet_bg"
            app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|top"
                    android:layout_margin="@dimen/dimen15dp"
                    android:src="@drawable/ic_baseline_cloud_upload_24"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/info_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/slide_up_to_cont"
                    android:textColor="@color/black"
                    android:textSize="@dimen/dimen20dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView2" />

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="@dimen/_150sdp"
                    android:layout_height="@dimen/_150sdp"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/dimen50dp"
                    android:src="@drawable/fyp_logo"
                    android:textColor="@color/black"
                    android:textSize="@dimen/dimen25dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/info_text" />


                <Button
                    android:id="@+id/button2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="30dp"
                    android:background="@drawable/rect_bg"
                    android:onClick="@{()->signUp_ViewModel.CreateAccountClicked()}"
                    android:text="@string/craete_account"
                    android:textColor="@color/white"
                    android:textSize="@dimen/dimen17dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView3" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toBottomOf="@+id/button2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/already_have_account"
                        android:textColor="@color/grey"
                        android:textSize="@dimen/dimen15dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:layout_marginLeft="@dimen/dimen15dp"
                        android:textStyle="bold|italic"
                        android:text="@string/login"
                        android:textColor="@color/light_red"
                        android:onClick="@{()->signUp_ViewModel.LoginClicked()}"
                        android:textSize="@dimen/dimen20dp" />

                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </FrameLayout>


    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>