<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="sendOtp_ViewModel"
            type="com.example.fypmoneydemo.phone_no_verification.sendOtp.SendOtpViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_image_tem"
        android:fitsSystemWindows="true"
        tools:context=".phone_no_verification.sendOtp.SendOtpActivity">


        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="@dimen/_150sdp"
            android:layout_height="@dimen/_150sdp"
            android:layout_gravity="center"
            android:layout_marginTop="64dp"
            android:src="@drawable/fyp_logo"
            android:textColor="@color/black"
            android:textSize="@dimen/dimen25dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="28dp"
            android:gravity="center"
            android:textStyle="bold|italic"
            android:text="@string/phone_no_verification"
            android:textColor="@color/black"
            android:textSize="@dimen/_35sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView3" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen15dp"
            android:layout_marginTop="@dimen/dimen30dp"
            android:background="@drawable/rect_grey"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView">


            <com.rilixtech.widget.countrycodepicker.CountryCodePicker
                android:id="@+id/ccp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/dimen5dp"
                app:ccp_defaultNameCode="IN"
                app:ccp_hideNameCode="true" />

            <EditText
                android:id="@+id/et_mobile"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:gravity="left"
                android:maxLength="10"
                android:hint="@string/mobile_number"
                android:imeOptions="actionDone"
                android:inputType="phone"
                android:padding="@dimen/dimen10dp"
                android:textColor="@color/black"
                android:textColorHint="@color/hint" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:background="@drawable/rect_bg"
            android:layout_margin="@dimen/dimen15dp"
            android:onClick="@{()->sendOtp_ViewModel.GetOtpClicked()}"
            android:text="@string/send_otp"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="@dimen/dimen17dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

        <!-- <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:orientation="vertical"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">

             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="@dimen/dimen15dp"
                 android:layout_marginRight="@dimen/dimen15dp"
                 android:background="@drawable/rect_white"
                 android:orientation="vertical"
                 android:padding="@dimen/dimen10dp">




             </LinearLayout>


         </LinearLayout>-->

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>